--- v1.1 (2015-07-xx) ---
* Fix installation of glibc older than 2.16.0.
* Update QT5_VER (from 5.4.2 to 5.5.0) in all configs.
* Update GCC_VER and add GCC_EXTRA_VER into all configs.
* Add support of Ubuntu 14.04-LTS [i586 and amd64] (shared).
* Add new package qtconnectivity.

--- v1.0 (2015-06-24) ---
* Fix build of glibc 2.16.0 and later.
* Update config for Ubuntu 14.04-LTS [i586] (static).
* Add support of Ubuntu 14.04-LTS [amd64] (static).
* Rename TARGET from ${ARCH}-pc-linux-gnu to ${ARCH}-cross-linux-gnu.
* Improve build logging.

--- v0.9 (2015-06-17) ---
* Add support of builds for i386, i486, i586 and i686 on x86_64 system.
* Add support of AstraLinux 1.3 [amd64] (shared).
* Add support of Ubuntu 14.04-LTS [i586] (static).
* Change `./make.sh clean` behaviour: now it deletes only sub-directories
  specified in CONFIGS variable from settings.sh

--- v0.8 (2015-06-04) ---
* First public release.
