@@ -86,8 +86,8 @@ FREEGLUT_VER=2.8.1
 
 QT4_VER=4.8.7
 QT4_SUBVER=4.8
-QT5_VER=5.5.0
-QT5_SUBVER=5.5
+QT5_VER=5.4.2
+QT5_SUBVER=5.4
 
 CMAKE_VER=2.8.1
 CMAKE_SUBVER=2.8
