@@ -1,6 +1,7 @@
 --- v1.1 (2015-07-xx) ---
 * Fix installation of glibc older than 2.16.0.
-* Update QT5_VER (from 5.4.2 to 5.5.0) in all configs.
+* Update QT5_VER (from 5.4.2 to 5.5.0) in all configs except AstraLinux 1.2
+  (too old Glibc there).
 * Update GCC_VER and add GCC_EXTRA_VER into all configs.
 * Add support of Ubuntu 14.04-LTS [i586 and amd64] (shared).
 * Add new package qtconnectivity.
